<resources>
    <string name="app_name">AppChat</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="create_account">Create Account</string>
    <string name="please_log_in">Please Log In</string>
    <string name="cancel_friend_req">Cancel Friend Request</string>
    <string name="display_name">Display Name</string>
    <string name="user_status">User Status</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="total_friends">Total Friends</string>
    <string name="decline_request">Decline Request</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Settings</string>
    <string name="message_prompt">Enter Message...</string>
    <string name="last_seen">Last Seen</string>
    <string name="no_request_msg">There are no Requests</string>
    <string name="msg_sample_text">hi hun, how are you?</string>
    <string name="accounts">Accounts</string>
    <string name="accept_req">Accept Friend Request</string>
    <string name="cancel_req">Cancel Friend Request</string>
    <string name="received_req">received</string>
    <string name="sent_req">sent</string>
    <string name="friends_table">Friends</string>
    <string name="setting_class">Setting</string>
    <string name="remove_name">\"Remove \"</string>
    <string name="online_tag">online</string>
    <string name="no_friends_msg">You currently have no Friends</string>
    <string name="talk_to_friends">Go on, talk to your friends!</string>
    <string name="space">\" \"</string>
    <string name="home">Home</string>
    <string name="to_do">To Do</string>
    <string name="challenge">Challenge</string>
    <string name="challenge_ys">Challenge Yourself</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_status">Save Status</string>
    <string name="todo">Todo</string>
</resources>
