<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="120dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/aclonica"
        android:text="@string/register"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aclonica"
        android:text="@string/login"
        android:textColor="@color/colorAccent" />


</RelativeLayout>