<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.setting.SettingActivity">

    <include
        android:id="@+id/status_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/status_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/user_status">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_btn"
        android:layout_centerInParent="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/received_msg_background"
        android:fontFamily="@font/aclonica"
        android:text="@string/change_image"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/status_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_input"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/received_msg_background"
        android:fontFamily="@font/aclonica"
        android:text="@string/save_status"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

</RelativeLayout>