<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.setting.SettingActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/setting_toolbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_setting"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/setting_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/text_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_setting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/display_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:fontFamily="serif"
        android:text="@string/user_status"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/text_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/sent_msg_background"
        android:fontFamily="@font/aclonica"
        android:text="@string/change_status"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <include layout="@layout/layout_bottom_nav"/>


</RelativeLayout>